--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@pixi/filter-drop-shadow": "^4.1.5",
     "lodash": "^4.17.21",
+    "pixi-scrollbox": "^2.3.1",
     "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.0.4"
   }
